# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datasketches"
version = "0.3.0"

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

categories = ["data-structures", "algorithms"]
description = "A software library of stochastic streaming algorithms (a.k.a. sketches)"
keywords = ["sketch", "hyperloglog", "probabilistic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# Each sketch has its own feature, so that users can opt in to only the sketches they need.
bloom = []
countmin = []
cpc = []
frequencies = []
hll = []
tdigest = []
theta = []

[dev-dependencies]
googletest = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
